--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ click==8.3.0
 colorama==0.4.6
 cryptography==46.0.3
 dnspython==2.8.0
+ecdsa==0.19.1
 email-validator==2.3.0
 fastapi==0.120.0
 fastapi-cli==0.0.14
@@ -30,23 +31,28 @@ Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+packaging==25.0
 passlib==1.7.4
 psycopg2-binary==2.9.11
 pwdlib==0.3.0
+pyasn1==0.6.1
 pycparser==2.23
 pydantic==2.12.3
 pydantic_core==2.41.4
 Pygments==2.19.2
 PyJWT==2.10.1
 python-dotenv==1.2.1
+python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.3
 requests==2.32.5
 rich==14.2.0
 rich-toolkit==0.15.1
 rignore==0.7.1
+rsa==4.9.1
 sentry-sdk==2.42.1
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.44
 starlette==0.48.0
